--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Goals#index</h1>
-<p>Find me in app/views/goals/index.html.erb</p>
+<div class="wrapper">
+  <%= render "side_bar" %>
+  <%= render "main_goal" %>
+</div>
