フロントサイドの調整

--- a/app/views/goals/_main_goal.html.erb
+++ b/app/views/goals/_main_goal.html.erb
@@ -1,1 +1,16 @@
-＜チャット画面＞
+<div class="goal-header">
+  <div class="left-header">
+    <div class="header-title">
+    </div>
+  </div>
+  <div class="right-header">
+    <div class="header-button">
+    </div>
+  </div>
+</div>
+
+<div class="branches">
+</div>
+
+<div class="goal-footer">
+</div>
