--- a/app/views/goals/_side_bar.html.erb
+++ b/app/views/goals/_side_bar.html.erb
@@ -1,1 +1,9 @@
-＜サイドバー＞
+<div class="side-bar-header">
+  <div class="header-name">
+  </div>
+  <div class="create-goal">
+  </div>
+</div>
+
+<div class="goals">
+</div>
